# utilities

./: .clang-format  .clang-tidy  .codacy.yml  .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CPPLINT.cfg  README.md  azure-pipelines.yml
.ci/: azure-build.yml  azure-test.yml  build_docs.sh  run_codecov.sh  tsan-cache.cmake
.circleci/: config.yml
.github/actions/cmake_config/: action.yml
.github/actions/create-file-update-pr/: action.yml
.github/actions/quick_cmake/: action.yml
.github/workflows/: asan.yml  coverage.yml  msan.yml  static-analyzers.yml  tests.yml  tsan.yml
config/: cppcheck_suppressions.txt  spelling_whitelist.txt
config/cmake/: AddGoogletest.cmake  CheckLatestCXXStandardOption.cmake  CodeCoverage.cmake  compiler_flags.cmake
gmlc/: CMakeLists.txt
gmlc/utilities/: CMakeLists.txt  TimeSeries.hpp  TimeSeriesMulti.hpp  base64.cpp  base64.h  charMapper.cpp  charMapper.h  demangle.hpp  dpcomp.c  dpcomp.cpp  editdist.c  editdist.cpp  generic_string_ops.hpp  jwink.c  jwink.cpp  main.c  mapOps.hpp  namecmp.h  smithWat.c  smithWat.cpp  stringConversion.cpp  stringConversion.h  stringOps.cpp  stringOps.h  string_viewConversion.h  string_viewDef.h  string_viewOps.cpp  string_viewOps.h  timeRepresentation.hpp  timeStringOps.cpp  timeStringOps.hpp  vectorOps.cpp  vectorOps.hpp
gmlc/utilities/extra/: .clang-tidy
tests/: .clang-tidy  CMakeLists.txt  StringConversionTests.cpp  StringOpTests.cpp  String_viewConversionTests.cpp  String_viewOpsTests.cpp  TimeSeriesMultiTests.cpp  TimeSeriesTests.cpp  TimeTests.cpp  base64Tests.cpp  charMapperTests.cpp  mapOpTests.cpp
